LampaKattintas félig mülködik

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Lampas Jatek</h1>
     <div class="lampak"></div>
-
+    <h1>Kattints valamelyik lámpára!</h1>
     <footer><p>Béldy Ádám</p></footer>
 </body>
 </html>
